--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
 
   <!-- Write your HTML here -->
   
+  <table>
+    <tr>
+      <th>City</th>
+      <th>State</th>
+      <th>2017 estimate</th>
+    </tr>
+    <tr></tr>
+    <tr></tr>
+    <tr></tr>
+    <tr></tr>
+  </table>
+  
 </body>
 </html>
